First step refactoring TestExecutor